tests/it/wire/snapshots/it__wire__gemini__multi_turn_request.snap
---
source: tests/it/wire/gemini.rs
expression: rendered
---
{
  "body": {
    "contents": [
      {
        "parts": [
          {
            "text": "What is the capital of France?"
          }
        ],
        "role": "user"
      },
      {
        "parts": [
          {
            "text": "Paris."
          }
        ],
        "role": "model"
      },
      {
        "parts": [
          {
            "text": "And of Spain?"
          }
        ],
        "role": "user"
      }
    ],
    "generationConfig": {
      "maxOutputTokens": 128
    },
    "safetySettings": [
      {
        "category": "HARM_CATEGORY_DANGEROUS_CONTENT",
        "threshold": "BLOCK_ONLY_HIGH"
      }
    ],
    "systemInstruction": {
      "parts": [
        {
          "text": "Keep it short."
        }
      ]
    }
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "content-length",
      "375"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ],
    [
      "x-goog-api-key",
      "[redacted]"
    ]
  ],
  "method": "POST",
  "path": "/v1beta/models/gemini-3.1-pro-002:generateContent"
}
