tests/it/wire/snapshots/it__wire__gemini__provider_options_request.snap
---
source: tests/it/wire/gemini.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/v1beta/models/gemini-2.5-pro-002:generateContent",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "content-length",
      "146"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ],
    [
      "x-goog-api-key",
      "[redacted]"
    ]
  ],
  "body": {
    "contents": [
      {
        "parts": [
          {
            "text": "Hello"
          }
        ],
        "role": "user"
      }
    ],
    "generationConfig": {
      "maxOutputTokens": 128
    },
    "max_output_tokens": 256,
    "service_tier": "flex"
  }
}
