tests/it/wire/snapshots/it__wire__gemini__raw_options_merge_into_the_generation_config.snap
---
source: tests/it/wire/gemini.rs
expression: rendered
---
{
  "body": {
    "contents": [
      {
        "parts": [
          {
            "text": "Hello"
          }
        ],
        "role": "user"
      }
    ],
    "generationConfig": {
      "maxOutputTokens": 128,
      "stopSequences": [
        "END"
      ],
      "temperature": 0.9,
      "thinkingConfig": {
        "includeThoughts": true,
        "thinkingLevel": "low"
      }
    },
    "safetySettings": [
      {
        "category": "HARM_CATEGORY_HARASSMENT",
        "threshold": "BLOCK_NONE"
      }
    ]
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "content-length",
      "290"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ],
    [
      "x-goog-api-key",
      "[redacted]"
    ]
  ],
  "method": "POST",
  "path": "/v1beta/models/gemini-2.5-pro-002:generateContent"
}
