tests/it/wire/snapshots/it__wire__gemini__reasoning_round_trip_request.snap
---
source: tests/it/wire/gemini.rs
expression: rendered
---
{
  "body": {
    "contents": [
      {
        "parts": [
          {
            "text": "Is 91 prime?"
          }
        ],
        "role": "user"
      },
      {
        "parts": [
          {
            "text": "91 is 7 times 13.",
            "thought": true,
            "thoughtSignature": "sig-abc"
          },
          {
            "text": "cmVkYWN0ZWQtcGF5bG9hZA==",
            "thought": true
          },
          {
            "text": "No, 91 is not prime."
          }
        ],
        "role": "model"
      },
      {
        "parts": [
          {
            "text": "What about 97?"
          }
        ],
        "role": "user"
      }
    ],
    "generationConfig": {
      "maxOutputTokens": 128
    },
    "safetySettings": [
      {
        "category": "HARM_CATEGORY_DANGEROUS_CONTENT",
        "threshold": "BLOCK_ONLY_HIGH"
      }
    ]
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "content-length",
      "438"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ],
    [
      "x-goog-api-key",
      "[redacted]"
    ]
  ],
  "method": "POST",
  "path": "/v1beta/models/gemini-3.1-pro-002:generateContent"
}
