tests/it/wire/snapshots/it__wire__gemini__replay_request-2.snap
---
source: tests/it/wire/gemini.rs
expression: rendered
---
{
  "id": "resp-gemini-2",
  "model": {
    "provider": "gemini",
    "model": "gemini-2.5-pro"
  },
  "content": [
    {
      "type": "text",
      "text": "Checking the weather."
    },
    {
      "type": "tool_call",
      "id": "get_weather-0-resp-gemini-2",
      "name": "get_weather",
      "arguments": {
        "city": "Paris"
      },
      "kind": "function",
      "provider_metadata": {
        "gemini": {
          "thoughtSignature": "sig-call"
        }
      }
    }
  ],
  "finish_reason": "tool_call",
  "usage": {
    "input": 42,
    "output": 12,
    "reasoning": 7,
    "cache_read": 0,
    "cache_write": 0
  },
  "raw": {
    "responseId": "resp-gemini-2",
    "modelVersion": "gemini-2.5-pro-002",
    "candidates": [
      {
        "index": 0,
        "content": {
          "role": "model",
          "parts": [
            {
              "text": "Checking the weather."
            },
            {
              "functionCall": {
                "name": "get_weather",
                "args": {
                  "city": "Paris"
                }
              },
              "thoughtSignature": "sig-call"
            }
          ]
        },
        "finishReason": "STOP"
      }
    ],
    "usageMetadata": {
      "promptTokenCount": 42,
      "candidatesTokenCount": 12,
      "thoughtsTokenCount": 7,
      "totalTokenCount": 61
    }
  }
}
