tests/it/wire/snapshots/it__wire__gemini__response_format_json_object-2.snap
---
source: tests/it/wire/gemini.rs
expression: rendered
---
{
  "id": "resp-gemini-3",
  "model": {
    "provider": "gemini",
    "model": "gemini-2.5-pro"
  },
  "content": [
    {
      "type": "text",
      "text": "{\"city\":\"Paris\",\"population\":2102650}"
    }
  ],
  "finish_reason": "stop",
  "usage": {
    "input": 9,
    "output": 14,
    "reasoning": 0,
    "cache_read": 0,
    "cache_write": 0
  },
  "raw": {
    "responseId": "resp-gemini-3",
    "modelVersion": "gemini-2.5-pro-002",
    "candidates": [
      {
        "index": 0,
        "content": {
          "role": "model",
          "parts": [
            {
              "text": "{\"city\":\"Paris\",\"population\":2102650}"
            }
          ]
        },
        "finishReason": "STOP"
      }
    ],
    "usageMetadata": {
      "promptTokenCount": 9,
      "candidatesTokenCount": 14
    }
  }
}
