tests/it/wire/snapshots/it__wire__gemini__response_format_json_schema-2.snap
---
source: tests/it/wire/gemini.rs
expression: rendered
---
{
  "content": [
    {
      "text": "{\"city\":\"Paris\",\"population\":2102650}",
      "type": "text"
    }
  ],
  "finish_reason": "stop",
  "id": "resp-gemini-3",
  "model": {
    "model": "gemini-2.5-pro",
    "provider": "gemini"
  },
  "raw": {
    "candidates": [
      {
        "content": {
          "parts": [
            {
              "text": "{\"city\":\"Paris\",\"population\":2102650}"
            }
          ],
          "role": "model"
        },
        "finishReason": "STOP",
        "index": 0
      }
    ],
    "modelVersion": "gemini-2.5-pro-002",
    "responseId": "resp-gemini-3",
    "usageMetadata": {
      "candidatesTokenCount": 14,
      "promptTokenCount": 9
    }
  },
  "usage": {
    "cache_read": 0,
    "cache_write": 0,
    "input": 9,
    "output": 14,
    "reasoning": 0
  }
}
